<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
	<name>uam_logger_pkg</name>
	<version>0.0.0</version>
	<description>ROS2 experiment logger for UAM SITL data.</description>
	<maintainer email="mattia@example.com">mattia</maintainer>
	<license>Apache-2.0</license>

	<buildtool_depend>ament_python</buildtool_depend>

	<exec_depend>rclpy</exec_depend>
	<exec_depend>rcl_interfaces</exec_depend>
	<exec_depend>geometry_msgs</exec_depend>
	<exec_depend>nav_msgs</exec_depend>
	<exec_depend>sensor_msgs</exec_depend>
	<exec_depend>std_msgs</exec_depend>

	<!-- Required by project constraints (topics may be present in SITL) -->
	<exec_depend>px4_msgs</exec_depend>
	<exec_depend>px4_ros_com</exec_depend>
	<exec_depend>interbotix_xs_msgs</exec_depend>

	<test_depend>ament_lint_auto</test_depend>
	<test_depend>ament_lint_common</test_depend>
	<test_depend>ament_flake8</test_depend>
	<test_depend>ament_pep257</test_depend>
	<test_depend>ament_copyright</test_depend>
	<test_depend>pytest</test_depend>

	<export>
		<build_type>ament_python</build_type>
	</export>
</package>
